<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MeetApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_remove">Remove</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="action_add_person">Add friend</string>
    <string name="action_location_found">Add location</string>
    <string name="title_activity_meeting">MeetingActivity</string>
    <string name="target_coordinates">Latitude: %1$.3f  Longitude: %2$.3f</string>
    <string name="my_coordinates">Latitude: %1$.3f  Longitude: %2$.3f</string>
    <string name="location_prompt">Enter Latitude and Longitude of a location</string>
    <string name="person_prompt">Enter Latitude and Longitude of a person</string>
    <string name="latitude"> Latitude</string>
    <string name="longitude"> Longitude </string>
    <string name="location"> Location </string>
    <string name="person"> Person </string>
    <string name="login"> Create user / Login to existing user </string>
    <string name="username"> Username </string>
    <string name="password"> Password </string>
    <string name="target_info"> Target location </string>
    <string name="my_info"> My Location </string>


</resources>
