<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto">

    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_add_person"
        android:icon="@drawable/ic_action_add_person"
        android:title="@string/action_add_person"
        yourapp:showAsAction="ifRoom" />

    <item android:id="@+id/action_add_location"
        android:icon="@drawable/ic_action_location_found"
        android:title="@string/action_location_found"
        yourapp:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        yourapp:showAsAction="never" />
    <application android:theme="@style/CustomActionBarTheme"/>
</menu>
